--- a/payroll/calculate/benefit/motor-vehicle.html
+++ b/payroll/calculate/benefit/motor-vehicle.html
@@ -436,14 +436,14 @@
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> <a href="#rates" aria-controls="centred-popup" class="wb-lbx" role="button">reasonable allowance rate&nbsp;<span class="far fa-question-circle"></span></a> - First 5,000 kilometres</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> <a href="#rates" aria-controls="centred-popup" class="wb-lbx" role="button">Reasonable allowance rate&nbsp;<span class="far fa-question-circle"></span></a> - First 5,000 kilometres</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> <a href="#rates" aria-controls="centred-popup" class="wb-lbx" role="button">reasonable allowance rate&nbsp;<span class="far fa-question-circle"></span></a> - Additional kilometres</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> <a href="#rates" aria-controls="centred-popup" class="wb-lbx" role="button">Reasonable allowance rate&nbsp;<span class="far fa-question-circle"></span></a> - Additional kilometres</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
   
@@ -483,14 +483,14 @@
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">$0.61 is the fixed rate for 2022 on the first 5,000 kilometres</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5">$0.61 is the reasonable allowance rate for 2022 on the first 5,000 kilometres</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">$0.55 is the fixed rate for 2022 on the additional kilometres</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5">$0.55 is the reasonable allowance rate for 2022 on the additional kilometres</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
   
@@ -532,7 +532,7 @@
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"><a href="#oper-rates" aria-controls="centred-popup" class="wb-lbx" role="button">fixed rate&nbsp;<span class="far fa-question-circle"></span></a> </span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"><a href="#oper-rates" aria-controls="centred-popup" class="wb-lbx" role="button">Fixed rate&nbsp;<span class="far fa-question-circle"></span></a> </span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
   
@@ -723,7 +723,7 @@
 		 
 <section id="oper-rates" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Prescribed rates (section 7305.1 of the Income Tax Regulations) per kilometre</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-oper-rates"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/automobile.html#ajax-oper-rates"></div>
 	</div></section>
 	
 	<section id="availability2" class="mfp-hide modal-dialog modal-content overlay-def"> <header class="modal-header"><h2 class="modal-title">What is considered made available to your employee</h2>
