--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -296,14 +296,14 @@
 	 
 <h2 id="stps">Steps</h2>
  <ol class="lst-stps ld-zr stps-strpd">
-<li><h3 id="step1">Determine if the employee is required to use their vehicle in the course of their employment duties</h3>
-<p id="require">You need to determine if the employee was required to use their own automobile or motor vehicle in the course of their employment duties.</p>
+<li><h3 id="step1">Determine if your employee is required to use their vehicle in the course of their employment duties</h3>
+<p id="require">You need to determine if your employee was required to use their own automobile or motor vehicle in the course of their employment duties.</p>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to use their own vehicle in the course of their employment duties, the benefit from the allowance, advance or reimbursement paid to the employee is <strong>taxable</strong>. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a> </p>  </li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use their own vehicle in the course of their employment duties, the benefit from the allowance, advance or reimbursement paid to the employee may not be taxable if they meet <strong>all conditions</strong>. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step2">Step 2 - Determine if there was business driving of the automobile</a></p></li>
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to use their own vehicle in the course of their employment duties, the allowance, advance or reimbursement paid to your employee is <strong>taxable</strong>. </p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a>.</p>  </li>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use their own vehicle in the course of their employment duties, the allowance, advance or reimbursement paid to your employee may not be taxable if they meet <strong>all conditions</strong>. </p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step2">Step 2 - Determine if there was business driving of the automobile</a></p>.</li>
 </ul>
 </li>
 
@@ -338,7 +338,7 @@
 				<li><span class="fas fa-check fa-lg fa-li text-success"></span> Personal driving is any driving by an employee of a vehicle for purposes not related to their employment</li>
 				<li><span class="fas fa-check fa-lg fa-li text-success"></span> Driving to conduct personal activities</li>	
                                 <li><span class="fas fa-check fa-lg fa-li text-success"></span> Travel between home and a regular place of employment other than a point of call</li>
-  				<li><span class="fas fa-check fa-lg fa-li text-success"></span> Travel between home and a regular place of employment even if you insist the employee drives the vehicle home, such as: 
+  				<li><span class="fas fa-check fa-lg fa-li text-success"></span> Travel between home and a regular place of employment even if you insist your employee drives the vehicle home, such as: 
 					<ul>
 					<li>When the employee is on call</li>
 					<li>When the employer believes the vehicle and its contents are more secure at the employee’s residence</li>
@@ -351,9 +351,9 @@
  </div>
 <hr>	
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no business driving</strong>, the benefit from the allowance, advance or reimbursement paid to the employee is taxable. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no business driving</strong>, the benefit from the allowance, advance or reimbursement paid to your employee is taxable. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a></p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If there is business driving, the benefit from the allowance, advance or reimbursement paid to the employee may not be taxable. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If there is business driving, the benefit from the allowance, advance or reimbursement paid to your employee may not be taxable. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span>  Continue to: <a href="#step3">Step 3 - Get the required records from your employee to confirm the total number of kilometres travelled for business driving</a></p> </li>
 </ul>
 </li>
@@ -424,7 +424,7 @@
 	<td><p>You are a controller at a retirement home. Currently, employees receive a rate of $0.35 per kilometre for automobile and motor vehicle allowances when they have to travel for work to help the residents with their daily tasks. This rate was negotiated in the last collective agreement and the collective agreement is signed for four years. You understand that the $0.35 rate is lower than the reasonable per-kilometre rate.</p>
 
 </td>
-	<td><p>The benefit is taxable to the employee because:</p>
+	<td><p>The benefit is taxable to your employee because:</p>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-lg fa-li text-success"></span>  The rate per kilometre is not considered reasonable because it is lower than the reasonable per-kilometre rate </li>
 <li><span class="fas fa-check fa-lg fa-li text-success"></span>  Even when the rates are part of a collective agreement, if the rates are lower or higher than the prescribed rate, the rate is not considered reasonable. </li>
@@ -481,7 +481,7 @@
 <li class="cnjnctn-col">Allowances paid at per-kilometre rates that are not considered reasonable because they are either too high or too low </li>
 <li class="cnjnctn-col">Flat-rate allowances paid to employees where the amount paid is <strong>not </strong>related to the number of kilometres driven </li>
 <li class="cnjnctn-col">Allowances that <strong>combine </strong>flat-rate and reasonable per-kilometre allowances for the same use of the vehicle </li>
-<li class="cnjnctn-col">Allowances received where the employee is also reimbursed for the same use of the vehicle (except where the reimbursement is in respect of supplementary business insurance or toll or ferry charges and the amount of the allowance was determined without reference to the reimbursed expenses for supplementary business insurance or toll or ferry charges)</li>
+<li class="cnjnctn-col">Allowances received where your employee is also reimbursed for the same use of the vehicle (except where the reimbursement is in respect of supplementary business insurance or toll or ferry charges and the amount of the allowance was determined without reference to the reimbursed expenses for supplementary business insurance or toll or ferry charges)</li>
 </ul>
 
 <details><summary>Examples of allowances that are partly-taxable or taxable</summary>
@@ -508,19 +508,19 @@
 	<td><p>You own an office supply company where you employ workers on the road as salespersons. Each salesperson has a specific territory to cover and they use their own vehicle. They are paid a monthly flat rate allowance of $600 no matter where they go or how far they drive. This was agreed on when they were hired and is cited in their respective employment contracts.</p>
 
 </td>
-	<td><p>The benefit is taxable to the employee because:</p>
+	<td><p>The benefit is taxable to your employee because:</p>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-lg fa-li text-success"></span> The flat rate allowance is not considered reasonable because it is not based on the number of business kilometres driven</li>
 
 </ul> </td>
 </tr>
 <tr>
-	<td><p>You pay an allowance to your employee as a flat per-diem rate to offset the employee's fixed expenses for each day the vehicle is required. You also pay a reasonable per-kilometre rate for each kilometre driven to offset the operating expenses.</p>
+	<td><p>You pay an allowance to your employee as a flat per-diem rate to offset your employee's fixed expenses for each day the vehicle is required. You also pay a reasonable per-kilometre rate for each kilometre driven to offset the operating expenses.</p>
 
 </td>
-	<td><p>The benefit is taxable to the employee because:</p>
+	<td><p>The benefit is taxable to your employee because:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check fa-lg fa-li text-success"></span> The flat per-diem rate compensates the employee for some of the same use on which the reasonable per-kilometre allowance is based. That is, the fixed expenses incurred by the employee to operate the vehicle.</li>
+<li><span class="fas fa-check fa-lg fa-li text-success"></span> The flat per-diem rate compensates your employee for some of the same use on which the reasonable per-kilometre allowance is based. That is, the fixed expenses incurred by your employee to operate the vehicle.</li>
 <li><span class="fas fa-check fa-lg fa-li text-success"></span> The combined amount is considered <strong>one </strong>allowance and it is <strong>not </strong>based <strong>only </strong>on the number of kilometres the vehicle is used for employment purposes.</li>
 
 </ul>  </td>
@@ -531,7 +531,7 @@
 	<td><p>You pay an allowance to your employee as a flat-rate per month for travel inside the employment district. You also pay a reasonable per-kilometre rate for employment-related travel outside the employment district.</p>
 
 </td>
-	<td><p>The benefit is <strong>partly</strong> taxable to the employee because:</p>
+	<td><p>The benefit is <strong>partly</strong> taxable to your employee because:</p>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-lg fa-li text-success"></span> The flat-rate allowance does not cover any of the same use of the vehicle on which the reasonable per-kilometre allowance is based, the allowances are considered separately.</li>
 <li><span class="fas fa-check fa-lg fa-li text-success"></span> The reasonable per-kilometre allowance paid for travel outside the district is <strong>not taxable</strong>.</li>
@@ -607,8 +607,8 @@
 <li class="cnjnctn-col">You can justify your position regarding the amount of the accountable advance being reasonable (step 3)</li>
 <li class="cnjnctn-col">You can justify your position regarding a pre-established per-kilometre rate that is not more than a reasonable amount (step 5)</li>
 <li class="cnjnctn-col">You document in your employee’s record the method for establishing and keeping track of the accountable advance</li>
-<li class="cnjnctn-col">No other provision of the Income Tax Act requires you to include the advances in the employee’s income</li>
-<li class="cnjnctn-col">If your employee’s expenses were under the amount of the advance, the employee was required to return the difference by the final day of employment for the year or December 31st, whichever is earliest</li>
+<li class="cnjnctn-col">No other provision of the Income Tax Act requires you to include the advances in your employee’s income</li>
+<li class="cnjnctn-col">If your employee’s expenses were under the amount of the advance, your employee was required to return the difference by the final day of employment for the year or December 31st, whichever is earliest</li>
 <li class="cnjnctn-col">If your employee’s expenses were over the advance amount, you topped up the advance by the final day of employment for the year or December 31st, whichever is earliest</li>
 </ul>
 
@@ -637,24 +637,24 @@
 	<td><p>You own a sporting goods store. There is an out of town sales conference your business is participating in and you have scheduled one salesperson to attend. Two weeks prior to travel, you pay an accountable advance to your salesperson to cover expenses relating to the use of their personal vehicle to travel to and from the conference. This amount is based on the reasonable per-kilometre rate. The salesperson accounted for their expenses.</p>
 
 </td>
-	<td><p>The benefit is <strong>not</strong> taxable to the employee because:</p>
+	<td><p>The benefit is <strong>not</strong> taxable to your employee because:</p>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-lg fa-li text-success"></span>  The rate per kilometre is considered reasonable </li>
-<li><span class="fas fa-check fa-lg fa-li text-success"></span>  The employee accounted for their expenses by producing vouchers and returned any amount they did not spend </li>
+<li><span class="fas fa-check fa-lg fa-li text-success"></span>  Your employee accounted for their expenses by producing vouchers and returned any amount they did not spend </li>
 
 </ul>  </td>
 </tr>
 <tr>
-	<td><p>You are a manager for an insurance company. Your employees travel frequently to meet new and existing clients as part of their duties. Given the frequency of travel of representatives, you use the averaging allowances method to calculate the accountable advance your employees receive each pay to cover eligible expenses relating to the use of their personal vehicles. The amounts are based on the reasonable per-kilometre rate, and are recorded in the employees' files.</p>
+	<td><p>You are a manager for an insurance company. Your employees travel frequently to meet new and existing clients as part of their duties. Given the frequency of travel of representatives, you use the averaging allowances method to calculate the accountable advance your employees receive each pay to cover eligible expenses relating to the use of their personal vehicles. The amounts are based on the reasonable per-kilometre rate, and are recorded in your employees' files.</p>
 
-<p>At the end of the year, the employees provide you with a log book that lists the amount of business kilometres they have travelled and any advances they have received. You review the advances paid to your employees and their eligible expenses, at which time the company will pay any amounts owing to the employee or the employee will reimburse any amounts received that exceed their eligible expenses.</p>
+<p>At the end of the year, your employees provide you with a log book that lists the amount of business kilometres they have travelled and any advances they have received. You review the advances paid to your employees and their eligible expenses, at which time the company will pay any amounts owing to your employee or your employee will reimburse any amounts received that exceed their eligible expenses.</p>
 
 </td>
-	<td><p>The benefit is <strong>not</strong> taxable to the employee because:</p>
+	<td><p>The benefit is <strong>not</strong> taxable to your employee because:</p>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-lg fa-li text-success"></span> There is a pre-established per-kilometre rate that is not more than a reasonable amount</li>
 <li><span class="fas fa-check fa-lg fa-li text-success"></span> The rate and the advance are reasonable under the circumstances</li>
-<li><span class="fas fa-check fa-lg fa-li text-success"></span> The method is documented in the employee's file</li>
+<li><span class="fas fa-check fa-lg fa-li text-success"></span> The method is documented in your employee's file</li>
 
 </ul> </td>
 </tr>
@@ -680,7 +680,7 @@
 
 
 <li><h3>Calculate the value of the benefit to be included on the T4 slip</h3>
-<p id="step7"><strong>If the allowance, advance or reimbursement paid to the employee for the use of their own vehicle is taxable</strong>, the value of the benefit is equal to the value of the benefit paid to the employee in the year. The amount must be included on the T4 slip of the employee.</p>
+<p id="step7"><strong>If the allowance, advance or reimbursement paid to your employee for the use of their own vehicle is taxable</strong>, the value of the benefit is equal to the value of the benefit paid to your employee in the year. The amount must be included on the T4 slip of your employee.</p>
 
 
 </li>
@@ -691,17 +691,17 @@
 <p>If you include an allowance as income for your employee and the allowance is considered too low, you <strong>must fill out and sign </strong><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2200.html">Form T2200, Declaration of Conditions of Employment</a> and your employee can deduct on their income tax and benefit return: </p>
 
 <ul class="fa-ul">
-<li><span class="fas fa-check fa-li text-success"></span>  An amount up to the amount of the allowance (if the employee did not keep a record or does not wish to claim employment expenses) </li>
+<li><span class="fas fa-check fa-li text-success"></span>  An amount up to the amount of the allowance (if your employee did not keep a record or does not wish to claim employment expenses) </li>
 <li><span class="fas fa-check fa-li text-success"></span>  Expenses paid in the year (if a record was kept) </li>
 <li><span class="fas fa-check fa-li text-success"></span>  No expense if the allowance is not added to their income </li>
 </ul>
-<p class="mrgn-tp-md">By signing the form, you are only certifying that the employee met the conditions of employment and had to pay for the expenses under their employment contract. </p>
+<p class="mrgn-tp-md">By signing the form, you are only certifying that your employee met the conditions of employment and had to pay for the expenses under their employment contract. </p>
 
-<p>It is the employee's responsibility to claim the expenses on their income tax and benefit return and to keep records to support the claim.</p>
+<p>It is your employee's responsibility to claim the expenses on their income tax and benefit return and to keep records to support the claim.</p>
 </div>
 
 <details><summary>Example</summary>
-<p>You allow your employees to use their personal motor vehicle for business and pay them a monthly motor vehicle allowance to pay for the operating expenses and you include the allowance in the employees' employment income as a taxable benefit.</p>
+<p>You allow your employees to use their personal motor vehicle for business and pay them a monthly motor vehicle allowance to pay for the operating expenses and you include the allowance in your employees' employment income as a taxable benefit.</p>
 </details>
 
 <p>Learn more:</p>
