--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -278,14 +278,9 @@
 </div>
 
 <p class="mrgn-bttm-lg">You may provide an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> to your employee to compensate for use of their automobile or motor vehicle in connection with or in the course of their office or employment duties.</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"> 
-                                 
-                                <h5 class="text-muted">Employer</h5>Includes a person related to the employer</li>
-<li class="cnjnctn-col">
-                                 
-                                <h5 class="text-muted">Employee and shareholder</h5>Includes a person related to the employee or shareholder</li>
-</ul>
+
+ <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/automobile.html#ajax-includes"></div>		 
+
 
 <h2 class="h3">On this page</h2>
 <ul>
@@ -309,7 +304,7 @@
 
 <li><h3 id="step2">Determine if there was business driving of the automobile </h3>
 
-<p><strong>Business driving</strong> is any driving done by an employee between work locations for purposes related to their employment duties. This includes regular places of employment and a point of call.</p>
+<p>Business driving is <strong>any driving</strong> done by an employee between work locations for purposes related to their employment duties. This includes regular places of employment and a point of call.</p>
 <p>Personal driving is any driving by an employee of a vehicle for purposes not related to their employment. </p>
   
 <div data-ajax-replace="ajax/personal-vehicle.txt #ajax-regular"></div>
