--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -309,46 +309,13 @@
   
 <div data-ajax-replace="ajax/personal-vehicle.txt #ajax-regular"></div>
 <div data-ajax-replace="ajax/personal-vehicle.txt #ajax-pointcall"></div>
- <div id="ajax-business">
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-    <li class="cnjnctn-col">
-                                 
-                                <h4 class="text-muted">Business driving</h4>
-				 <ul class="fa-ul">
-				 <li><span class="fas fa-check fa-lg fa-li text-success"></span> Travel between office workplace and a client workplace </li>
-				 <li><span class="fas fa-check fa-lg fa-li text-success"></span> Travel between office workplace for errands for business purposes </li>
-				<li><span class="fas fa-check fa-lg fa-li text-success"></span> Travel between home and a client workplace </li>	 
-				<li><span class="fas fa-check fa-lg fa-li text-success"></span> Travel between home and a point of call, such as:
-					<ul>
-						<li>Salesperson visiting customers</li>
-						<li>Going to a client’s premises for a meeting</li>
-						<li>Making a repair call</li>
-
- </ul>
-</li></ul></li>
-                              <li class="cnjnctn-col">
-                                
-                                 <h4 class="text-muted">Personal driving</h4>
- 				<ul class="fa-ul">
-				<li><span class="fas fa-check fa-lg fa-li text-success"></span> Personal driving is any driving by an employee of a vehicle for purposes not related to their employment</li>
-				<li><span class="fas fa-check fa-lg fa-li text-success"></span> Driving to conduct personal activities</li>	
-                                <li><span class="fas fa-check fa-lg fa-li text-success"></span> Travel between home and a regular place of employment other than a point of call</li>
-  				<li><span class="fas fa-check fa-lg fa-li text-success"></span> Travel between home and a regular place of employment even if you insist your employee drives the vehicle home, such as: 
-					<ul>
-					<li>When the employee is on call</li>
-					<li>When the employer believes the vehicle and its contents are more secure at the employee’s residence</li>
-					<li>Where it is more convenient or economical to have the vehicle driven to the employee’s residence</li>						       
-					</ul></li>
-				      </ul>
-                              </li>
-
-                             </ul>
- </div>
+<div data-ajax-replace="ajax/personal-vehicle.txt #ajax-driving"></div>
+ 
 <hr>	
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no business driving</strong>, the benefit from the allowance, advance or reimbursement paid to your employee is taxable. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no business driving</strong>, the allowance, advance or reimbursement paid to your employee is taxable. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a></p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If there is business driving, the benefit from the allowance, advance or reimbursement paid to your employee may not be taxable. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If there is business driving, the allowance, advance or reimbursement paid to your employee may not be taxable. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span>  Continue to: <a href="#step3">Step 3 - Get the required records from your employee to confirm the total number of kilometres travelled for business driving</a></p> </li>
 </ul>
 </li>
