--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -391,7 +391,7 @@
 	
 
 <ul class="list-unstyled cnjnctn-type-and">
- <li class="cnjnctn-col">Automobile <strong>standby charge</strong> benefit related to the availability and personal driving </li>
+ <li class="cnjnctn-col">Automobile <a href="#what-standby" aria-controls="centred-popup" class="wb-lbx" role="button">standby charge&nbsp;<span class="far fa-question-circle"></span></a> benefit related to the availability and personal driving </li>
  <li class="cnjnctn-col">Automobile <a href="#opercost2" aria-controls="centred-popup" class="wb-lbx" role="button">operating expense&nbsp;<span class="far fa-question-circle"></span></a> benefit when you pay the operating costs of the automobile subject to a standby charge</li>
 </ul>
 
@@ -707,6 +707,12 @@
 
 <li><h3 id="step10">Calculate the standby charge benefit</h3>
 <p id="calstand">If you <a href="#availability2" aria-controls="centred-popup" class="wb-lbx" role="button">make an automobile available&nbsp;<span class="far fa-question-circle"></span></a> to your employee, you must calculate the value of the standby charge related to the <a href="#personal2" aria-controls="centred-popup" class="wb-lbx" role="button">personal driving&nbsp;<span class="far fa-question-circle"></span></a> and the <strong>availability</strong> of the automobile.</p>
+<details><summary>What is a standby charge benefit</summary>
+<div id="ajax-what-standby">
+<p>A standby charge is for the benefit your employee gets when your owned or leased automobile is made available for their personal use. Any reimbursements you receive from your employee, other than expenses relating to the operation of the automobile, will decrease the standby charge that has to be included in your employee's income.</p>
+</div>
+</details>
+
 <details><summary>How to calculate the value using estimates during the year</summary>
 <p>During the year, calculate the value of the benefit using estimates. To obtain the amount you must add to your employee’s salary for a given pay period, you must divide the value of the benefit you have 
 estimated by the number of pay periods in the year. </p>
@@ -2390,6 +2396,11 @@ $0.24
 	<section id="oper-rates" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Prescribed rates (section 7305.1 of the Income Tax Regulations) per kilometre</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-oper-rates"></div>
+	</div></section>
+
+<section id="what-standby" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a standby charge benefit</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="#ajax-what-standby"></div>
 	</div></section>
 	
 	
