--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1249,7 +1249,7 @@ estimated by the number of pay periods in the year. </p>
 <p>The cost of leasing the automobile includes the following:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Total monthly lease or rental cost for the automobile (including any trade in amount, down payment made over the term of the lease, GST/HST and PST, but excluding insurance) divided by the number of months in the term of the lease.  The total leasing cost is generally equal to its fair market value at the time the automobile is leased) </li>
+<li class="cnjnctn-col">Total monthly lease or rental cost for the automobile (including any trade in amount, down payment made over the term of the lease, GST/HST and PST, but excluding insurance) divided by the number of months in the term of the lease.  The total leasing cost is generally equal to its fair market value at the time the automobile is leased. </li>
 <li class="cnjnctn-col">Any associated costs, such as maintenance contracts,  down payments, trade in amount, excess mileage charges, terminal charges less terminal credits </li>
 </ul>
 </details>
@@ -1493,7 +1493,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 <br>
 <h4 id="reducedmethod" class="mrgn-tp-md">Reduced calculation</h4>
-<details><summary>Calculate the standby charge using the reduced calculcation</summary>
+<details><summary>Your employee is eligible for the reduced standby charged - Calculate the standby charge using the reduced calculcation</summary>
 
 <p id="standbyreduce">Use the following to calculate the reduced standby charge if <strong>all conditions in steps 7 are met</strong>:</p>
 
@@ -1813,18 +1813,18 @@ estimated by the number of pay periods in the year. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step14">Step 14 - Calculate the value of the automobile benefit to be included on the T4 slip</a>.</p>
 
 </li>
-                         <li class="cnjnctn-col"><p>You have to calculate the operating expenses benefit if your employee <strong>does not </strong> reimburses you for all operating expenses related to personal driving no later than 45 days after the end of the year.</p>
+                         <li class="cnjnctn-col"><p>You have to calculate the operating expenses benefit if your employee <strong>does not </strong> reimburse you for all operating expenses related to personal driving no later than 45 days after the end of the year.</p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step12">Step 12 - Determine if your employee is eligible for the optional operating expenses calculation</a>.</p>
 </li>
                           </ul>
 </li>
 
-<li><h3 id="step12">Determine if your employee is eligible for the optional operating expenses calculation</h3>
+<li><h3 id="step12">Determine if your employee is eligible for the optional operating expenses benefit calculation</h3>
 <p id="calcoper1">You can use the optional calculation for the operating expenses if <strong>all</strong> of the following apply:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col"> You include a standby charge in your employee’s income</li>
-<li class="cnjnctn-col"> Your employee uses the automobile primarily (more than 50%) in the performance of their duties (step 7)</li>
+<li class="cnjnctn-col"> Your employee uses the automobile primarily (more than 50%) in the performance of their duties</li>
 <li class="cnjnctn-col"> Your employee informed you in writing, before the end of the year, of their intention to use the optional method </li>
 </ul>
 
@@ -1847,8 +1847,8 @@ estimated by the number of pay periods in the year. </p>
 </details>
 <br/>
 <h4>Optional or fixed rate calculations</h4>
-<details><summary>Calculate the operating expenses using the <strong>optional</strong> calculation</summary>
-<p id="calcoper1a">Use the following to calculate the operating expenses using the optional calculation if <strong>all conditions in step 12 are met</strong>:</p>
+<details><summary>Calculate the operating expenses benefit using the <strong>optional</strong> calculation</summary>
+<p id="calcoper1a">Use the following to calculate the operating expenses benefit using the optional calculation if <strong>all conditions in step 12 are met</strong>:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
@@ -1926,8 +1926,8 @@ estimated by the number of pay periods in the year. </p>
 </details>
 </details>
 
-<details><summary>Calculate the operating expenses using the <strong>fixed rate</strong> calculation</summary>
-<p id="calcoper2">Use the prescribed rate per kilometre of personal driving to calculate the operating expenses using the fixed rate calculation:</p>
+<details><summary>Calculate the operating expenses benefit using the <strong>fixed rate</strong> calculation</summary>
+<p id="calcoper2">Use the prescribed rate per kilometre of personal driving to calculate the operating expenses benefit using the fixed rate calculation:</p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                <li><span class="fa-stack text-success">
