--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1845,6 +1845,10 @@ estimated by the number of pay periods in the year. </p>
 <details><summary>Examples of operating expenses</summary>
  <div data-ajax-replace="ajax/oper-vehicle.txt"></div>
 </details>
+<details><summary>Operating expenses paid by employee to third party</summary>
+<p>Under the CRA administrative policy, if you made an automobile available to your employee and you require your employee to pay a third party for part or all of the operating expenses in the year, you can deduct the portion of the expenses paid by your employee that are attributable to personal use from the operating expense benefit that you calculated. Your records have to show that your employee paid the expenses directly to the third party.</p>
+</details>
+
 <br/>
 <h4>Optional or fixed rate calculations</h4>
 <details><summary>Calculate the operating expenses benefit using the <strong>optional</strong> calculation</summary>
