--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1493,7 +1493,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 <br>
 <h4 id="reducedmethod" class="mrgn-tp-md">Reduced calculation</h4>
-<details><summary>Your employee is eligible for the reduced standby charged - Calculate the standby charge using the reduced calculcation</summary>
+<details><summary>Calculate the standby charge using the reduced calculcation</summary>
 
 <p id="standbyreduce">Use the following to calculate the reduced standby charge if <strong>all conditions in steps 7 are met</strong>:</p>
 
