--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -2249,7 +2249,7 @@ $0.24
 </li>
 
 <li><h3 id="step16">Report the benefit on a slip</h3>
-<p><strong>If the benefit is taxable, </strong>you must report the following on the slip<strong>. </strong></p>
+<p><strong>If the benefit is taxable, </strong>you must report the following on a T4 or T4A slip.</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   <li class="cnjnctn-col">
