--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -298,7 +298,7 @@
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to use their own vehicle in the course of their employment duties, the allowance, advance or reimbursement paid to your employee is <strong>taxable</strong>. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a>.</p>  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use their own vehicle in the course of their employment duties, the allowance, advance or reimbursement paid to your employee may not be taxable if they meet <strong>all conditions</strong>. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step2">Step 2 - Determine if there was business driving of the automobile</a></p>.</li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step2">Step 2 - Determine if there was business driving of the automobile</a>.</p></li>
 </ul>
 </li>
 
@@ -314,9 +314,9 @@
 <hr>	
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no business driving</strong>, the allowance, advance or reimbursement paid to your employee is taxable. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a>.</p></li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If there is business driving, the allowance, advance or reimbursement paid to your employee may not be taxable. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span>  Continue to: <a href="#step3">Step 3 - Get the required records from your employee to confirm the total number of kilometres travelled for business driving</a></p> </li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span>  Continue to: <a href="#step3">Step 3 - Get the required records from your employee to confirm the total number of kilometres travelled for business driving</a>.</p> </li>
 </ul>
 </li>
 
