--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -325,7 +325,6 @@
 <p>Your employee should keep records of the total number of kilometres travelled for business driving made with their own vehicle. For example:</p>
  <div id="ajax-log">
 <ul  class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li fa-lg text-success"></span> Relevant receipts</li>
 <li><span class="fas fa-check fa-li fa-lg text-success"></span> A log of the total number of kilometres driven all year as part of their employment duties</li>
 <li><span class="fas fa-check fa-li fa-lg text-success"></span> A log of each work trip taken that includes the date, destination and purpose of the trip</li>
 </ul>
@@ -335,10 +334,10 @@
 </div>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you do <strong>not receive</strong> the required records and <strong>base the calculation</strong> of your allowance, advance or reimbursement on them, the benefit is taxable because it <strong>does not meet the requirements of the Income Tax Act</strong> for the benefit to be only based on business kilometres driven.</p> 
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a></p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the required detailed records and you received a copy, the benefit from the allowance, advance or reimbursement may not be taxable.</p>
-<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if special considerations apply to the benefit</a></p></li>
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you do <strong>not receive</strong> the required records and <strong>base the calculation</strong> of your allowance, advance or reimbursement on them, the allowance or reimbursement is taxable because it <strong>does not meet the requirements of the Income Tax Act</strong> for the benefit to be only based on business kilometres driven.</p> 
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a>.</p></li>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the required detailed records and you received a copy, the allowance, advance or reimbursement may not be taxable.</p>
+<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if special considerations apply to the benefit</a>.</p></li>
 </ul>
 </li>
 
