--- a/payroll/calculate/benefit/motor-vehicle.html
+++ b/payroll/calculate/benefit/motor-vehicle.html
@@ -396,7 +396,7 @@
     <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, you <strong>cannot</strong> calculate using the fixed rate calculation.</p>  
 <p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 -  Calculate the value of the motor vehicle benefit to be included on the T4 slip.</a></p>  </li>    
     <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the required records and you received a copy, you may be able to calculate using the <strong>fixed rate calculation</strong>. </p>
-<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the motor vehicle home at night policy applies to the benefit</a>.</p>  </li>
+<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if your employee is eligible for the fixed rate calculation</a>.</p>  </li>
                           </ul>
 </li>
 
