--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -341,19 +341,18 @@
 </ul>
 </li>
 
-<li><h3 id="step4">Determine if special considerations apply to the benefit</h3>
-<p>The benefit may not be taxable if the benefit paid to your employee for the use of their vehicle in the course of their employment duties is done in <strong>one</strong> of the following special situations:</p>
+<li><h3 id="step4">Determine if any exceptions apply to the automobile benefit</h3>
+<p>An allowance or reimbursement paid to your employee for the use of their vehicle may not be taxable in <strong>one</strong> of the following special situations:</p>
 
 <ul class="list-unstyled cnjnctn-type-or">
  <li class="cnjnctn-col"> <a href="remote.html">Your employee works in remote locations</a> </li>
  <li class="cnjnctn-col"> <a href="special-site.html">Your employee works at special work sites, including prescribed zones</a> </li>
- <li class="cnjnctn-col"> <a href="disability.html">Your employee has a severe or prolonged impairment</a> </li>
 </ul>
 <hr>	
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"> </span> If the use of the vehicle is in <strong>one</strong> of the above special situations, <strong>do not</strong> continue to next step.  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the use of the vehicle is <strong>not</strong> in one of the above special situations, the benefit paid for the use of their vehicle in the course of their employment duties may be taxable.</p> 
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Determine if the rate per-kilometre is considered reasonable</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Determine if the rate per-kilometre is considered reasonable</a>.</p></li>
 </ul>
 </li>
 
