--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -359,12 +359,12 @@
 <li><h3 id="step5">Determine if the rate per-kilometre is considered reasonable</h3>
 <p>Generally, the CRA allows you to use the per-kilometre rates prescribed in section 7306 of the Income Tax Regulations (maximum amount deductible as a business expense) to determine if the rate used for amounts paid to your employee is reasonable (step 5a). </p>
 <p>In exceptional situations, a rate other than the prescribed rate may be considered reasonable (step 5b).</p>
-<details><summary>Example of rates per-kilometre not considered reasonable</summary>
+<details><summary>Example of per-kilometre rates not considered reasonable</summary>
 
     <div class="table-responsive">
       <table class="table table-striped small table-condensed">
         <caption class="wb-inv">
-       Example of rates per-kilometre not considered reasonable
+       Example of per-kilometre rates not considered reasonable
         </caption>
 
 
@@ -384,18 +384,18 @@
 	<td><p>You are a controller at a retirement home. Currently, employees receive a rate of $0.35 per kilometre for automobile and motor vehicle allowances when they have to travel for work to help the residents with their daily tasks. This rate was negotiated in the last collective agreement and the collective agreement is signed for four years. You understand that the $0.35 rate is lower than the reasonable per-kilometre rate.</p>
 
 </td>
-	<td><p>The benefit is taxable to your employee because:</p>
+	<td><p>The allowances are taxable to your employee because:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check fa-lg fa-li text-success"></span>  The rate per kilometre is not considered reasonable because it is lower than the reasonable per-kilometre rate </li>
-<li><span class="fas fa-check fa-lg fa-li text-success"></span>  Even when the rates are part of a collective agreement, if the rates are lower or higher than the prescribed rate, the rate is not considered reasonable. </li>
-<li><span class="fas fa-check fa-lg fa-li text-success"></span> You may need to fill out Form T2200, Declaration of Conditions of Employment, if your employee is eligible to deduct part of the cost</li>
+<li><span class="fas fa-check fa-lg fa-li text-success"></span>  The per-kilometre rate is not considered reasonable because it is lower than the reasonable per-kilometre rate </li>
+<li><span class="fas fa-check fa-lg fa-li text-success"></span> Collective agreements do not supersede the Income Tax Act </li>
+<li><span class="fas fa-check fa-lg fa-li text-success"></span> If the allowance is considered too low than the reasonable per-kilometre rate, you may need to fill out and sign Form T2200, Declaration of Conditions of Employment (step 8 provides more information about the requirement to fill out Form T2200)</li>
 </ul>  </td>
 </tr>
 
 </tbody> </table></div>
 </details>
  <ol class="lst-stps-sub ld-zr stps-strpd">
-<li><h4>Determine using the prescribed rates (in section 7306 of the Income Tax Regulations)</h4>
+<li><h4>Determine using the per-kilometre prescribed rates (in section 7306 of the Income Tax Regulations)</h4>
 <div data-ajax-replace="ajax/reasonable-rate-vehicle.txt"></div>
 </li>
 
